feat:added validation and swagger documentation to Service entity